# CudaNote

./: .gitignore  README.md
GEMM/: CMakeLists.txt  gemm.cu
Reduce/: CMakeLists.txt  reduce.cu
Softmax/: CMakeLists.txt  soft_max.cu
Transpose/: CMakeLists.txt  transpose.cu
common/: buffer.h
